--- a/.env
+++ b/.env
@@ -17,4 +17,6 @@ PORT=3001
 #environment
 NODE_ENV=local
 #AES passphrase
-AES_PASSPHRASE=1235190sdkljf13
+AES_PASSPHRASE=DX@kkVDG'Ex1235190sdkljf13
+#used for encryping jwt tokens
+JWT_PASSPHRASE=rx3]fMvZ_u4ef([S\=11v1$ss#v2cs28w
