--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "start": "node ./bin/www"
   },
   "dependencies": {
+    "bcrypt": "^0.8.7",
     "body-parser": "~1.15.1",
     "cookie-parser": "~1.4.3",
     "crypto-js": "^3.1.6",
@@ -18,5 +19,10 @@
     "pg": "^6.1.0",
     "sequelize": "^3.24.3",
     "serve-favicon": "~2.3.0"
+  },
+  "devDependencies": {
+    "mocha": "^3.1.0",
+    "should": "^11.1.0",
+    "supertest": "^2.0.0"
   }
 }
