--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
     "morgan": "~1.7.0",
     "pg": "^6.1.0",
     "sequelize": "^3.24.3",
-    "serve-favicon": "~2.3.0"
+    "serve-favicon": "~2.3.0",
+    "swagger-jsdoc": "^1.7.0"
   },
   "devDependencies": {
     "bluebird": "^3.4.6",
